--- a/02-Challenge/Develop/assets/css/style.css
+++ b/02-Challenge/Develop/assets/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -19,7 +20,6 @@ body {
     display: inline-block;
     font-size: 48px;
 }
-
 .header h1 .seo {
     color: #d9dcd6;
 }
@@ -81,22 +81,22 @@ p {
     clear: both;
     float: right;
     width: 20%;
-    height: 100%;
+    height: 120%;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     background-color: #2589bd;
 }
 
-.side-benefit {
+.side-bar {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.side-benefit h3 {
+.side-bar h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.side-benefit img {
+.side-bar img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
