Finishing up the challege, added comments, changed the id/class to the apporiate names.

--- a/02-Challenge/Develop/assets/css/style.css
+++ b/02-Challenge/Develop/assets/css/style.css
@@ -1,3 +1,4 @@
+/*Sizing the webpage*/
 * {
     box-sizing: border-box;
     padding: 0;
@@ -5,10 +6,12 @@
     scroll-behavior: smooth;
 }
 
+/*adding the main background color*/
 body {
     background-color: #d9dcd6;
 }
 
+/*Setting the header*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif';
@@ -20,10 +23,11 @@ body {
     display: inline-block;
     font-size: 48px;
 }
-.header h1 .seo {
+.header h1 span {
     color: #d9dcd6;
 }
 
+/*Adding to the navbar in the header*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -50,7 +54,8 @@ p {
     font-size: 16px;
 }
 
-.img {
+/*Style for the main image*/
+.hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -59,6 +64,7 @@ p {
     background-position: center;
 }
 
+/*Both floats are for the text inside the content*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,12 +75,31 @@ p {
     margin-left: 25px;
 }
 
-.content {
+/*Setting the text font and height as well as the color and padding*/
+.content{
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+.content article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+    background-color: #0072bb;
+    color: #ffffff;
+}
 
+.content img {
+    max-height: 200px;
+}
+
+.content h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*Positioning the texts and the image for the best font and size */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,40 +111,23 @@ p {
     background-color: #2589bd;
 }
 
-.side-bar {
+.benefits div {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.side-bar h3 {
+.benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.side-bar img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.info-css {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.info-css img {
-    max-height: 200px;
-}
-
-.info-css h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/*Positioning and putting the best font and alignment on the text*/
 .footer {
     padding: 30px;
     clear: both;
